Revert "feat: optional bundle with a jlink-shrunk JDK 25 runtime"
This reverts commit b0db122381e1580ba6cfd02d57588c666ba6e012.